# PROmiRNA

./: .travis.yml  README.md
external_data/: TATA_box_jaspar.psem
src/: CMakeLists.txt  PROmiRNA.cpp  build_matrix.h  conservation.h  create_background.h  create_dataset.h  em_algorithm.h  filter_mirna.h  interval_tree.h  mirna_classification.h  open_chromatin_overlap.h  overlap.h  post_processing.h  quantile_normalization.h  structs.h
src/CD-HIT/: cdhit-common.c++  cdhit-common.h  cdhit-est.c++  cdhit-est.h  cdhit-utility.c++  cdhit-utility.h
src/TRAP/: annotate.h  annotate_sequence.cpp  annotate_sequence.h  matrix.h  matrix_properties.cpp  read_matrix.cpp  region_read.cpp  region_read.h  score_calc.cpp  score_calc.h
test/: CMakeLists.txt  test_build_matrix.cpp  test_classification.cpp  test_create_dataset.cpp  test_em_algorithm.cpp  test_merge_background.cpp  test_overlap.cpp  test_quantile.cpp
test/test_files/: beta_parameters.tmp  data_set.txt  lib_number.txt  output_EM_complete.txt  test_hsa.gff
